syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "DiscountGrpcService.Protos";

service DiscountProtoService {
  rpc GetDiscount (GetDiscountRequest) returns (DiscountResponse);
  rpc DeleteAdvertDiscounts (DeleteDiscountRequest) returns (google.protobuf.Empty);
}

message GetDiscountRequest {
  string AdvertId = 1;
  float Price = 2;
}

message DiscountResponse {
  float CalculatedPrice = 1;
  google.protobuf.Timestamp ExpiresAt = 2;
}

message DeleteDiscountRequest {
  string AdvertId = 1;
}

message DiscountModel
{
  int32 Percentage = 1;
  google.protobuf.Timestamp ExpiresAt = 2;
  string AdvertId = 3;
}